Updating CSS and Layout

--- a/app/locales/en/translations.json
+++ b/app/locales/en/translations.json
@@ -12,7 +12,7 @@
 			"label": "Search locations",
 			"fuzzy": "Fuzzy",
 			"country": "Country",
-			"submit": "Search"
+			"submit": "search"
 		},
 		"options": {
 			"label": "Options"
