--- a/app/locales/en/translations.json
+++ b/app/locales/en/translations.json
@@ -37,7 +37,9 @@
 			"panel_geocoding": "Shows all existing and recently added geocoded locations for the current project",
 			"panel_locations": "Shows location search results",
 			"map": "Map shows existing (green) and recently added (yellow) geocoded locations for the current project, as well as search results (grey)",
+			"countrylayercontrol": "Click on this icon to manage country layers",
 			"layercontrol": "Click on this icon to manage layers and basemaps",
+			"infocontrol": "Information about the project",
 			"zoomcontrol": "Use the zoom controls to zoom the map in or out",
 			"cancelbtn": "Click on cancel to return to the project list",
 			"submitbtn": "Click on submit button to save your changes"
